--- a/public/themes/notores-demo/public/pages/layouts/main.ejs
+++ b/public/themes/notores-demo/public/pages/layouts/main.ejs
@@ -1,132 +1,256 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="description" content="">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Notores - Demo</title>
-        <link href="https://getbootstrap.com/docs/4.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Notores - Demo</title>
+    <link href="https://getbootstrap.com/docs/4.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-        <style>
-            a,
-            a:focus,
-            a:hover {
-                color: #fff;
-            }
-            
-            .btn-secondary,
-            .btn-secondary:hover,
-            .btn-secondary:focus {
-                color: #333;
-                text-shadow: none; 
-                background-color: #fff;
-                border: .05rem solid #fff;
-            }
+    <style>
+        a,
+        a:focus,
+        a:hover {
+            color: #fff;
+        }
 
-            html,
-            body {
-                height: 100%;
-                background-color: #333;
-            }
+        .btn-secondary,
+        .btn-secondary:hover,
+        .btn-secondary:focus {
+            color: #333;
+            text-shadow: none;
+            background-color: #fff;
+            border: .05rem solid #fff;
+        }
 
-            body {
-                display: -ms-flexbox;
-                display: flex;
-                color: #fff;
-                text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-                box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-            }
+        label {
+            text-shadow: none;
+        }
 
-            .cover-container {
-                max-width: 42em;
-            }
-            
-            .masthead {
-                margin-bottom: 2rem;
-            }
+        html,
+        body {
+            height: 100%;
+            background-color: #333;
+        }
 
+        body {
+            display: -ms-flexbox;
+            display: flex;
+            color: #fff;
+            text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+            box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+        }
+
+        .cover-container {
+            max-width: 42em;
+        }
+
+        .masthead {
+            margin-bottom: 2rem;
+        }
+
+        .masthead-brand {
+            margin-bottom: 0;
+        }
+
+        .nav-masthead .nav-link {
+            padding: .25rem 0;
+            font-weight: 700;
+            color: rgba(255, 255, 255, .5);
+            background-color: transparent;
+            border-bottom: .25rem solid transparent;
+        }
+
+        .nav-masthead .nav-link:hover,
+        .nav-masthead .nav-link:focus {
+            border-bottom-color: rgba(255, 255, 255, .25);
+        }
+
+        .nav-masthead .nav-link + .nav-link {
+            margin-left: 1rem;
+        }
+
+        .nav-masthead .active {
+            color: #fff;
+            border-bottom-color: #fff;
+        }
+
+        @media (min-width: 48em) {
             .masthead-brand {
-                margin-bottom: 0;
+                float: left;
             }
 
-            .nav-masthead .nav-link {
-                padding: .25rem 0;
-                font-weight: 700;
-                color: rgba(255, 255, 255, .5);
-                background-color: transparent;
-                border-bottom: .25rem solid transparent;
+            .nav-masthead {
+                float: right;
             }
+        }
 
-            .nav-masthead .nav-link:hover,
-            .nav-masthead .nav-link:focus {
-                border-bottom-color: rgba(255, 255, 255, .25);
-            }
+        .cover {
+            padding: 0 1.5rem;
+        }
 
-            .nav-masthead .nav-link + .nav-link {
-                margin-left: 1rem;
-            }
+        .cover .btn-lg {
+            padding: .75rem 1.25rem;
+            font-weight: 700;
+        }
 
-            .nav-masthead .active {
-                color: #fff;
-                border-bottom-color: #fff;
-            }
+        .mastfoot {
+            color: rgba(255, 255, 255, .5);
+        }
 
-            @media (min-width: 48em) {
-                .masthead-brand {
-                    float: left;
-                }
-                .nav-masthead {
-                    float: right;
-                }
+        .form-signin {
+            width: 80%;
+        }
+
+        .form-signin > .container > .row > * {
+            width: 45%;
+        }
+
+        .form-signin > .container > .row {
+            align-items: baseline;
+            justify-content: space-between;
+        }
+
+        .form-label-group {
+            position: relative;
+            margin-bottom: 1rem;
+        }
+
+        .form-label-group > input,
+        .form-label-group > label {
+            height: 3.125rem;
+            padding: .75rem;
+        }
+
+        .form-label-group > label {
+            position: absolute;
+            top: 0;
+            left: 0;
+            display: block;
+            /*width: 100%;*/
+            margin-bottom: 0; /* Override default `<label>` margin */
+            line-height: 1.5;
+            color: #495057;
+            pointer-events: none;
+            cursor: text; /* Match the input under the label */
+            border: 1px solid transparent;
+            border-radius: .25rem;
+            transition: all .1s ease-in-out;
+        }
+
+        .form-label-group input::-webkit-input-placeholder {
+            color: transparent;
+        }
+
+        .form-label-group input:-ms-input-placeholder {
+            color: transparent;
+        }
+
+        .form-label-group input::-ms-input-placeholder {
+            color: transparent;
+        }
+
+        .form-label-group input::-moz-placeholder {
+            color: transparent;
+        }
+
+        .form-label-group input::placeholder {
+            color: transparent;
+        }
+
+        .form-label-group input:not(:placeholder-shown) {
+            padding-top: 1.25rem;
+            padding-bottom: .25rem;
+        }
+
+        .form-label-group input:not(:placeholder-shown) ~ label {
+            padding-top: .25rem;
+            padding-bottom: .25rem;
+            font-size: 12px;
+            color: #777;
+        }
+
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
+
+        .toast {
+            margin-right: 10pt;
+            margin-top: 10pt;
+            color: #000;
+            text-shadow: none;
+        }
+
+        .toast-header {
+            background-color: #fff;
+        }
+
+        .toast-body {
+            background-color: #fefefe;
+        }
+
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
             }
-            
-            .cover {
-                padding: 0 1.5rem;
-            }
-            .cover .btn-lg {
-                padding: .75rem 1.25rem;
-                font-weight: 700;
-            }
-            
-            .mastfoot {
-                color: rgba(255, 255, 255, .5);
-            }
-            .bd-placeholder-img {
-                font-size: 1.125rem;
-                text-anchor: middle;
-                -webkit-user-select: none;
-                -moz-user-select: none;
-                -ms-user-select: none;
-                user-select: none;
-            }
-            @media (min-width: 768px) {
-                .bd-placeholder-img-lg {
-                    font-size: 3.5rem;
-                }
-            }
-        </style>
-    </head>
-    <body class="text-center">
-        <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-            <header class="masthead mb-auto">
-                <div class="inner">
-                <h3 class="masthead-brand">Notores</h3>
-                <nav class="nav nav-masthead justify-content-center">
-                    <a class="nav-link active" href="#">Getting Started</a>
-                </nav>
-                </div>
-            </header>
-            
-            <main role="main" class="inner cover">
-                <%- content %>
-            </main>
-            
-            <footer class="mastfoot mt-auto">
-                <div class="inner">
-                <p>Template supplied by Notores for use in template project</p>
-                </div>
-            </footer>
+        }
+    </style>
+</head>
+<body class="text-center">
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <header class="masthead mb-auto">
+        <div class="inner">
+            <h3 class="masthead-brand">Notores</h3>
+            <% if(user && user.id) { %>
+                <% include ./../partials/menu/authorized.ejs %>
+            <% } else { %>
+                <% include ./../partials/menu/main.ejs %>
+            <% } %>
         </div>
-    </body>
+    </header>
+
+    <main role="main" class="container inner cover">
+        <%- content %>
+    </main>
+
+    <footer class="mastfoot mt-auto">
+        <div class="inner">
+            <p>Template supplied by Notores for use in template project</p>
+        </div>
+    </footer>
+</div>
+<div class="toast" aria-label="toast" data-delay="5000" style="position: absolute; top: 0; right: 0;">
+    <div class="toast-header">
+        <strong class="mr-auto" id="toast-title"></strong>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="toast-body">
+    </div>
+</div>
+</body>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+<script>
+    function setToast(title, message, type = 'success') {
+        $('.toast #toast-title').html(title);
+        $('.toast .toast-body').html(message);
+        $('.toast').toast('show');
+    }
+
+</script>
+
+
 </html>
